--- a/index.html
+++ b/index.html
@@ -14,12 +14,43 @@
 <body>
 	<div class="swiper-container">
     	<div class="swiper-wrapper">
-      		<div class="swiper-slide intro">
+      		<section class="swiper-slide intro">
       			<h1>SMart</h1>
       			<p><span>ou</span>Comment se faire de l'argent avec tes nouveaux super-pouvoirs !</p>
+      		</section>
+      		<div class="swiper-slide what">
+      			<div>
+      				<h2>SMart, c'est quoi ?</h2>
+      				<p>C'est une entreprise sociale (coopérative depuis 2016) née en Belgique en <span>1998</span> qui se développe dans 8 pays européens.</p>
+      				<p>Son activité principale est d' <span>accompagner des travailleurs autonomes</span>, notamment issus du secteur créatif, à développer leur propre activité dans un <span>cadre sécurisé.</span></p>
+      			</div>
+      			<div>
+      				<div>
+      					<h2>Les contrats ponctuels</h2>
+      					<p>Pour les <span>freelances</span> qui ont des contrats de manière <span>ponctuel</span> et qui souhaitent exercer comme <span>salariés</span>.</p>
+      				</div>
+      				<div>
+      					<h2>L'activité</h2>
+      					<p>Pour ceux qui ont une <span>activité professionnelle multifacette</span>, qui travail en <span>collectif</span>, qui ont des <span>frais professionnels</span> importants, qui touchent <span>des subsides</span> ou des <span>droits d'auteurs</span>, etc.</p>
+      				</div>
+      			</div>
       		</div>
-      		<div class="swiper-slide">Slide 2</div>
-      		<div class="swiper-slide">Slide 3</div>
+      		<div class="swiper-slide contrat">
+      			<div>
+      				<h2>Les contrats</h2>
+      				<p>La SMart mets à disposition un service <br> de gestion de contrats :</p>
+      				<ul>
+      					<li>Encodage rapide 24/24 et 7/7</li>
+      					<li>Simulateur en ligne</li>
+      					<li>La SMart se charge de l'administratif</li>
+      					<li>Salaire garantit dans les 7 jours ouvrables</li>
+      					<li>Assurances à partir de un contrat presté</li>
+      				</ul>
+      			</div>
+      			<div>
+      				slide
+      			</div>
+      		</div>
       		<div class="swiper-slide">Slide 4</div>
       		<div class="swiper-slide">Slide 5</div>
       		<div class="swiper-slide">Slide 6</div>
@@ -28,8 +59,8 @@
     	<!-- Add Pagination -->
     	<div class="swiper-pagination"></div>
     	<!-- Add Arrows -->
-    	<div class="swiper-button-next"></div>
-    	<div class="swiper-button-prev"></div>
+    	<div class="swiper-button-next swiper-button-black"></div>
+    	<div class="swiper-button-prev swiper-button-black"></div>
     </div>
 
 	<!-- SCRIPT -->
