--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       		<section class="swiper-slide intro">
       			<h1>SMart</h1>
       			<p><span>ou</span>Comment se faire de l'argent avec tes nouveaux super-pouvoirs !</p>
+               <a href="https://smartbe.be/fr/" target="_blank">Le site officiel</a>
       		</section>
       		<div class="swiper-slide what">
       			<div>
@@ -47,9 +48,49 @@
       					<li>Assurances à partir de un contrat presté</li>
       				</ul>
       			</div>
-      			<div>
-      				slide
-      			</div>
+      			<div class="etapes">
+                  <div class="box">
+                     <h2>Mode d'emploi</h2>
+                     <h3>1. Bien calculer son salaire</h3>
+                     <p>Comprendre le budget salarial</p>
+                     <ul>
+                        <li>Le salaire net</li>
+                        <li>Les charges sociales</li>
+                        <li>Les assurances</li>
+                        <li>Les frais professionnels</li>
+                        <li>
+                           <ul class="souslist">Les frais SMart
+                              <li>6.5% sur le montant HTVA</li>
+                              <li>+30€ part sociale annuelle</li>
+                           </ul>
+                        </li>
+                        <li>
+                           <ul class="souslist">La TVA
+                              <li>6% pour les travaux artistiques</li>
+                              <li>21% pour les travaux non-artistiques</li>
+                           </ul>
+                        </li>
+                     </ul>
+                  </div>
+                  <div class="box">
+                     <h3>2. Quand et comment déclarer ?</h3>
+                     <ul>
+                        <li>Pour être en ordre, il faut <span>toujours encoder sa prestation avant de travailler</span>. Cela peut se faire quelques minutes avant de travailler grace aux outils SMart.</li>
+                        <li>Imprimer le contrat, le signer et <span>faire signer le bon de commande au client</span>. C'est aussi une <span>sécurité</span> pour nous afin que le client ne puisse pas remettre en question les conditions négociées.</li>
+                        <li><span>Envoyer les documents signés à la SMart</span>. Cela peut se faire par e-mail. Si la solution via internet n'est pas possible il a moyen de s'arranger par téléphone avec son conseiller</li>
+                        <li>Même une fois remit à la SMart les documents sont toujours disponibles à la <span>modification via l'outil de gestion de contrat</span>.</li>
+                     </ul>
+                  </div>
+                  <div class="box">
+                     <h3>3. SMart prend le relai</h3>
+                     <ul>
+                        <li>Facturation du montant convenu au client</li>
+                        <li>S'occupe des charges sociales, du précompte professionnel (11.11%) et de la TVA.</li>
+                        <li>Fait tout les documents sociaux et fiscaux</li>
+                        <li>Se charge d'aller reclamer au client</li>
+                     </ul>
+                  </div>
+               </div>
       		</div>
       		<div class="swiper-slide">Slide 4</div>
       		<div class="swiper-slide">Slide 5</div>
