--- a/index.html
+++ b/index.html
@@ -92,7 +92,36 @@
                   </div>
                </div>
       		</div>
-      		<div class="swiper-slide">Slide 4</div>
+      		<div class="swiper-slide activite">
+               <div>
+                  <h2>L'activité</h2>
+                  <h3>C'est quoi ?</h3>
+                  <p>Une <span>mini strucrure</span> qui permet de réaliser et de <span>facturer des projets</span>, et de les organiser sur le plan administratif <span>de manière légale</span> et ce sous le <span>statut de salarié.</span></p>
+               </div>
+               <div>
+                  <div>
+                     <h3>Pour qui ?</h3>
+                     <p>Pour les professionnels de la création.</p>
+                     <ul>
+                        <li>Ayant une activité professionnelle <span>multi-facettes</span>.</li>
+                        <li>Ayant un <span>collectif</span> ou <span>des associés</span>.</li>
+                        <li>Ayant une palette de <span>frais professionnels</span></li>
+                        <li>Agissant en tant qu'<span>auto-entrepreneur</span></li>
+                        <li>Recevant des <span>subsides</span></li>
+                        <li>Voulant facturer des <span>droits d'auteurs</span></li>
+                     </ul>
+                  </div>
+                  <div>
+                     <h3>Comment ça marche ?</h3>
+                     <p>Pour ouvrir une activité il faut:</p>
+                     <ul>
+                        <li><span>Suivre une session d'information</span> sur la gestion d'activité</li>
+                        <li><span>Rencontrer un gestionnaire</span> afin de discuter avec lui de la faisabilité de votre activité. Il vous accompagnera lors de toutes les étapes</li>
+                        <li><span>Gerer votre activité en ligne</span> comme avec les contrats.</li>
+                     </ul>
+                  </div>
+               </div>    
+            </div>
       		<div class="swiper-slide">Slide 5</div>
       		<div class="swiper-slide">Slide 6</div>
       		<div class="swiper-slide">Slide 7</div>
