--- a/index.html
+++ b/index.html
@@ -122,7 +122,40 @@
                   </div>
                </div>    
             </div>
-      		<div class="swiper-slide">Slide 5</div>
+      		<div class="swiper-slide schema">
+               <div class="up">
+                  <h3>Recettes</h3>
+                  <div class="recettes">
+                     <div>
+                        <p>Bon de commande client</p>
+                        <p>Facturation client</p>
+                     </div>
+                     <div>
+                        <p>Convention de financement</p>
+                     </div>
+                     <div>
+                        <p>Facturation de droits d'auteur ou droits voisins</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="square">
+                  <h2>Votre activité</h2>
+               </div>
+               <div class="down">
+                  <div class="depenses">
+                     <div>
+                        <p>Contrat d'engagement</p>
+                     </div>
+                     <div>
+                        <p>Notes de frais</p>
+                     </div>
+                     <div>
+                        <p>paiement concession</p>
+                     </div>
+                  </div>
+                  <h3>Dépenses</h3>
+               </div>    
+            </div>
       		<div class="swiper-slide">Slide 6</div>
       		<div class="swiper-slide">Slide 7</div>
     	</div>
