--- a/index.html
+++ b/index.html
@@ -156,8 +156,36 @@
                   <h3>Dépenses</h3>
                </div>    
             </div>
-      		<div class="swiper-slide">Slide 6</div>
-      		<div class="swiper-slide">Slide 7</div>
+      		<div class="swiper-slide recettesList">
+               <div>
+                  <h3>Le bon de commande</h3>
+                  <p>C'est comme un devis ou une demande de facturation: dés qu'il faut facturer un client pour un bien, un service ou une prestation que vous avez fournis, vous remplissez un bon de commande. Une fois signé par le client, SMart lui envoi la facture</p>
+               </div>
+               <div>
+                  <h2>Les recettes</h2>
+                  <h3>La convention de financement</h3>
+                  <p>C'est une formalisation d'un apport de fonds (subside, don, ...). Ce soutien financier apporté sans contrepartie commerciale à votre activité ne nécessite pas de facturation.</p>
+               </div>
+               <div>
+                  <h3>La facturation de concession de droits d'auteur</h3>
+                  <p>La facturation de concession de droits d'auteur et de droits voisins permets à un artiste d'être payé pour l'exploitation de ses créations ou prestations artistiques. Il s'agit d'une convention entre "concédant" (auteurs, artistes,...) et "concessionnaire" (client).</p>
+               </div>
+            </div>
+      		<div class="swiper-slide depensesList">
+               <div>
+                  <h3>Le contrat d'engagement</h3>
+                  <p>Il sert à payer votre salaire et à rémunérer des personnes qui collaborent à votre activité. Si vos collaborateurs n'ont pas la possibilités de facturer leurs prestations, les engager via votre activité SMart est une solution. Ces personnes doivent être affilées à votre activité en tant que participant et c'est Productions Associées qui les rémunère. A noter que l'administrateur de l'activité est responsable de l'encodage de tous les contrats des membres de l'activité. Après les avoir encodés, chaque engagement doit être signé par le donneur d'ordre et les prestataires.</p>
+               </div>
+               <div>
+                  <h2>Les dépenses</h2>
+                  <h3>Les notes de frais</h3>
+                  <p>elles vous permettent de récupérer les frais professionnels occasionnés par votre activité. Vous ou un autre prestataire avancez ces frais et vous êtes ensuite remboursé via "note de frais", dans les limites du budget.</p>
+               </div>
+               <div>
+                  <h3>Paiement de droits</h3>
+                  <p>Si vous souhaitez que tout ou une partie des sommes découlant d'une facturation de concession de droits d'auteur ou de droits voisins vous soient reversées au titre de paiement de concession de droits et ce distinctement du salaire perçu, vous devez compléter une demande de paiement de droits d'auteurs et de droits voisins.</p>
+               </div>    
+            </div>
     	</div>
     	<!-- Add Pagination -->
     	<div class="swiper-pagination"></div>
